Refactor Course APIs and add DTOs for cleaner responses
Replaced direct Course entity references in API responses with DTOs (CourseDto, CourseRequestDto) to decouple data layers. Updated CourseController to use these DTOs, improving clarity and usability. Removed unnecessary JSON annotations, and added Lombok dependency for boilerplate reduction.

--- a/pom.xml
+++ b/pom.xml
@@ -95,7 +95,17 @@
 			<version>4.0.1</version>
 			<scope>provided</scope>
 		</dependency>
-        <!-- added by Ahmed Mamdouh (END) -->
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.34</version>
+		</dependency>
+		<!-- added by Ahmed Mamdouh (END) -->
 	</dependencies>
 
 	<build>
